sov-modules/sov-modules-macros/tests/module_info/field_missing_attribute.stderr
error: This field is missing an attribute: add `#[module]` or `#[state]`.
 --> tests/module_info/field_missing_attribute.rs:7:5
  |
7 |     test_state1: StateMap<u32, u32, C::Storage>,
  |     ^^^^^^^^^^^
